Configure Cookiebot integration

--- a/hinnasto.html
+++ b/hinnasto.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Dec 05 2024 12:44:54 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Jan 05 2025 17:10:24 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="664df11e3916b1a4e878c284" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -32,11 +32,12 @@
         text-rendering: optimizeLegibility;
 	}
 </style>
+  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="70a813b3-3f24-4230-9fe4-da57fb9a6f73" data-blockingmode="auto" type="text/javascript"></script>
 </head>
 <body>
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="w-layout-blockcontainer nav-container w-container">
-      <a href="https://www.nords.fi" class="brand w-nav-brand"><img src="images/Nords.png" loading="lazy" sizes="(max-width: 479px) 125px, 135px" srcset="images/Nords-p-500.png 500w, images/Nords-p-800.png 800w, images/Nords-p-1080.png 1080w, images/Nords-p-1600.png 1600w, images/Nords-p-2000.png 2000w, images/Nords-p-2600.png 2600w, images/Nords-p-3200.png 3200w, images/Nords.png 5954w" alt="Nords Oy logo" class="logo-image"></a>
+      <a href="https://www.nords.fi" class="brand w-nav-brand"><img src="images/Nords.png" loading="lazy" alt="Nords Oy logo" class="logo-image"></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="https://www.nords.fi" class="nav-link w-nav-link">Koti</a>
         <a href="tiimi" class="nav-link w-nav-link">Tiimi</a>
@@ -114,6 +115,71 @@
                 <a id="w-node-d2eabb19-3f32-7544-6a34-7b9d5bd514c1-5bd51454" href="kysely" class="button w-button">Tilaa!</a>
                 <div class="space"></div>
                 <a id="w-node-d2eabb19-3f32-7544-6a34-7b9d5bd514c4-5bd51454" href="ota-yhteytta" class="button w-button">Kysy lisätietoa</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section">
+      <div class="w-layout-blockcontainer container w-container">
+        <div data-w-id="fe9c87e7-6247-58f8-7594-a7b490e6e051" style="opacity:0;-webkit-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="center-flex-div _40px-margin-bottom">
+          <h2>Usein kysyttyjä kysymyksiä</h2>
+        </div>
+        <div class="toogle-max-w">
+          <div data-w-id="63135fa2-cec1-197d-f2d0-7a34653cd554" class="toggle-wrapper">
+            <a href="#" class="toggle-header w-inline-block">
+              <div class="toogle-icon">
+                <div class="line-1"></div>
+                <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(90DEG) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(90DEG) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(90DEG) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(90DEG) skew(0, 0)" class="line-2"></div>
+              </div>
+              <div class="faq-title">Kuinka kauan kestää, ennen kuin saan uuden logon tai kotisivut?<br></div>
+            </a>
+            <div style="height:0PX" class="toggle-content">
+              <div style="-webkit-transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="toggle-space">
+                <p class="faq-paragraph">Aikataulu vaihtelee projektin laajuuden ja asiakkaan vaatimusten mukaan. Pyrimme kuitenkin työskentelemään tehokkaasti ja suorittamaan projektit mahdollisimman nopeasti. Kun olemme sopineet projektin yksityiskohdista, voimme antaa sinulle arvion siitä, kuinka kauan projekti kestää.<br><br>Kiireellisissä tarpeissa voimme toimia hyvinkin nopeasti.<br></p>
+              </div>
+            </div>
+          </div>
+          <div data-w-id="63135fa2-cec1-197d-f2d0-7a34653cd564" class="toggle-wrapper">
+            <a href="#" class="toggle-header w-inline-block">
+              <div class="toogle-icon">
+                <div class="line-1"></div>
+                <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(90DEG) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(90DEG) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(90DEG) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(90DEG) skew(0, 0)" class="line-2"></div>
+              </div>
+              <div class="faq-title">Onko mahdollista nähdä esimerkkejä aiemmin tekemistänne projekteista?</div>
+            </a>
+            <div style="height:0PX" class="toggle-content">
+              <div style="-webkit-transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="toggle-space">
+                <p class="faq-paragraph">Tietysti! Olemme ylpeitä aiemmista töistämme ja mielellämme jaamme portfoliomme kanssasi. Pääset tutustumaan aikaisempiin projekteihimme klikkaamalla <a href="#">tästä!</a> Haluamme aina varmistaa, että asiakkaamme ovat tyytyväisiä ja saavat juuri sellaisen lopputuloksen kuin he ovat toivoneet.<br></p>
+              </div>
+            </div>
+          </div>
+          <div data-w-id="63135fa2-cec1-197d-f2d0-7a34653cd573" class="toggle-wrapper">
+            <a href="#" class="toggle-header w-inline-block">
+              <div class="toogle-icon">
+                <div class="line-1"></div>
+                <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(90DEG) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(90DEG) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(90DEG) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(90DEG) skew(0, 0)" class="line-2"></div>
+              </div>
+              <div class="faq-title">Mitä ylläpitokustannuksia kotisivuissa on?<br></div>
+            </a>
+            <div style="height:0PX" class="toggle-content">
+              <div style="-webkit-transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="toggle-space">
+                <p class="faq-paragraph">Yleisesti ottaen ainoat ylläpitokustannukset, jotka sinun tarvitsee maksaa, ovat verkkotunnuksen vuosittaiset maksut, jotka ovat yleensä 10-20€/vuosi. Tämä on välttämätön kustannus, jotta voit pitää verkkotunnuksen hallinnassa ja säilyttää sen omistusoikeuden.<br><br>Muita kustannuksia voi syntyä kotisivujen laajuudesta ja muista ominaisuuksista riippuen. Yleisesti kuitenkin selviät ilman muita juoksevia kustannuksia. Esimerkiksi näiden sivujen ainoa kustannus on verkkotunnus!<br></p>
+              </div>
+            </div>
+          </div>
+          <div data-w-id="63135fa2-cec1-197d-f2d0-7a34653cd583" class="toggle-wrapper">
+            <a href="#" class="toggle-header w-inline-block">
+              <div class="toogle-icon">
+                <div class="line-1"></div>
+                <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(90DEG) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(90DEG) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(90DEG) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(90DEG) skew(0, 0)" class="line-2"></div>
+              </div>
+              <div class="faq-title">Mille alustalle rakennatte kotisivut?<br></div>
+            </a>
+            <div style="height:0PX" class="toggle-content">
+              <div style="-webkit-transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="toggle-space">
+                <p class="faq-paragraph">Rakennamme kotisivumme puhtaasti HTML-, CSS- ja JavaScript-ohjelmointikielellä. Tämä antaa meille täyden hallinnan sivuston suunnittelusta ja kehityksestä, mikä tarkoittaa, että voimme luoda räätälöityjä ratkaisuja asiakkaidemme yksilöllisiin tarpeisiin. Käyttämällä näitä ohjelmointikieliä voimme myös optimoida sivuston nopeuden ja käyttäjäystävällisyyden, mikä on erittäin tärkeää nykypäivän verkkosivustoille. <br><br>Pyrimme aina varmistamaan, että sivustomme ovat responsiivisia ja toimivat kaikilla laitteilla, ja tarjoavat korkealaatuisen käyttökokemuksen kaikille kävijöille.</p>
               </div>
             </div>
           </div>
@@ -217,7 +283,7 @@
       </div>
       <div class="center-bottom-flex">
         <div class="footer-bottom">
-          <div class="footer-bottom-text">© Nords Oy 2024.</div>
+          <div class="footer-bottom-text">© Nords Oy 2025.</div>
         </div>
         <div class="footer-bottom-right">
           <div class="footer-bottom-text">Digitoimisto, joka välittää.</div>
