--- a/tiimi.html
+++ b/tiimi.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Dec 05 2024 12:44:54 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Jan 05 2025 17:10:24 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="664df11e3916b1a4e878c282" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -32,11 +32,12 @@
         text-rendering: optimizeLegibility;
 	}
 </style>
+  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="70a813b3-3f24-4230-9fe4-da57fb9a6f73" data-blockingmode="auto" type="text/javascript"></script>
 </head>
 <body>
   <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="w-layout-blockcontainer nav-container w-container">
-      <a href="https://www.nords.fi" class="brand w-nav-brand"><img src="images/Nords.png" loading="lazy" sizes="(max-width: 479px) 125px, 135px" srcset="images/Nords-p-500.png 500w, images/Nords-p-800.png 800w, images/Nords-p-1080.png 1080w, images/Nords-p-1600.png 1600w, images/Nords-p-2000.png 2000w, images/Nords-p-2600.png 2600w, images/Nords-p-3200.png 3200w, images/Nords.png 5954w" alt="Nords Oy logo" class="logo-image"></a>
+      <a href="https://www.nords.fi" class="brand w-nav-brand"><img src="images/Nords.png" loading="lazy" alt="Nords Oy logo" class="logo-image"></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="https://www.nords.fi" class="nav-link w-nav-link">Koti</a>
         <a href="tiimi" aria-current="page" class="nav-link w-nav-link w--current">Tiimi</a>
@@ -63,7 +64,7 @@
             <div class="_10-px-top-margin-div">
               <div class="_16-px-text"><strong>Myynti &amp; Design</strong></div>
               <div class="space _4"></div>
-              <div class="_16-px-text">Helsinki</div>
+              <div class="_16-px-text">BBA, kyberturvallisuus LAUREA</div>
               <div class="social-div-team">
                 <a href="https://www.linkedin.com/in/eeli-lohi-244a43236/" target="_blank" class="social-link-team w-inline-block"><img src="images/65801fbc336f4eb49c54000d_linkedin_165801fbc336f4eb49c54000d_linkedin.png" loading="lazy" alt="LinkedIn ikoni" class="social-image"></a>
                 <a href="https://wa.me/358449819623" target="_blank" class="social-link-team w-inline-block"><img src="images/whatsapp-logo.svg" loading="lazy" alt="WhatsApp logo" class="social-image"></a>
@@ -188,7 +189,7 @@
       </div>
       <div class="center-bottom-flex">
         <div class="footer-bottom">
-          <div class="footer-bottom-text">© Nords Oy 2024.</div>
+          <div class="footer-bottom-text">© Nords Oy 2025.</div>
         </div>
         <div class="footer-bottom-right">
           <div class="footer-bottom-text">Digitoimisto, joka välittää.</div>
