--- a/kotisivut-kysely.html
+++ b/kotisivut-kysely.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Dec 05 2024 12:44:54 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sun Jan 05 2025 17:10:24 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66646b8c3d992cd35515738f" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -32,6 +32,7 @@
         text-rendering: optimizeLegibility;
 	}
 </style>
+  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="70a813b3-3f24-4230-9fe4-da57fb9a6f73" data-blockingmode="auto" type="text/javascript"></script>
 </head>
 <body>
   <div class="navigation-wrapper feedback">
@@ -171,7 +172,7 @@
       </div>
       <div class="center-bottom-flex">
         <div class="footer-bottom">
-          <div class="footer-bottom-text">© Nords Oy 2024.</div>
+          <div class="footer-bottom-text">© Nords Oy 2025.</div>
         </div>
         <div class="footer-bottom-right">
           <div class="footer-bottom-text">Digitoimisto, joka välittää.</div>
