Update website information

--- a/hinnasto.html
+++ b/hinnasto.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Jan 05 2025 17:18:35 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Jan 06 2025 15:34:04 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="664df11e3916b1a4e878c284" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -151,7 +151,7 @@
             </a>
             <div style="height:0PX" class="toggle-content">
               <div style="-webkit-transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 5PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="toggle-space">
-                <p class="faq-paragraph">Tietysti! Olemme ylpeitä aiemmista töistämme ja mielellämme jaamme portfoliomme kanssasi. Pääset tutustumaan aikaisempiin projekteihimme klikkaamalla <a href="#">tästä!</a> Haluamme aina varmistaa, että asiakkaamme ovat tyytyväisiä ja saavat juuri sellaisen lopputuloksen kuin he ovat toivoneet.<br></p>
+                <p class="faq-paragraph">Tietysti! Olemme ylpeitä aiemmista töistämme ja mielellämme jaamme portfoliomme kanssasi. Pääset tutustumaan aikaisempiin projekteihimme klikkaamalla <a href="tyot">tästä!</a> Haluamme aina varmistaa, että asiakkaamme ovat tyytyväisiä ja saavat juuri sellaisen lopputuloksen kuin he ovat toivoneet.<br></p>
               </div>
             </div>
           </div>
