Add Google certificates

--- a/blogi/ilmainen-hosting-palvelu-google-firebase-cli-n-avulla.html
+++ b/blogi/ilmainen-hosting-palvelu-google-firebase-cli-n-avulla.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jan 06 2025 15:34:04 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Jan 24 2025 07:57:50 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="666152f803478e4487f76a06" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -196,8 +196,9 @@
         <div class="footer-bottom">
           <div class="footer-bottom-text">© Nords Oy 2025.</div>
         </div>
-        <div class="footer-bottom-right">
-          <div class="footer-bottom-text">Digitoimisto, joka välittää.</div>
+        <div class="certificate-wrapper">
+          <a href="https://www.credly.com/badges/329a074b-725a-4dae-833a-197889699533/public_url" target="_blank" class="w-inline-block"><img loading="lazy" src="../images/google-digital-marketing-and-e-commerce-professiona.webp" alt="Google sertifikaatti" class="image"></a>
+          <a href="https://www.credly.com/badges/a31af7f6-a62c-4fb6-8936-0ef50fc867ac/email" target="_blank" class="w-inline-block"><img loading="lazy" src="../images/google-cybersecurity-certificate.webp" alt="Google sertifikaatti" class="image"></a>
         </div>
       </div>
     </div>
