--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Jan 24 2025 07:57:50 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Jan 31 2025 07:33:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="664df11e3916b1a4e878c27c" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -115,14 +115,14 @@
             <div id="w-node-_7e7a24ce-cd2e-c640-23ee-6084149a76d7-149a76d6" class="hide-on-mobile-div"></div>
             <div id="w-node-_7e7a24ce-cd2e-c640-23ee-6084149a76d8-149a76d6" class="center-flex-div">
               <div>
-                <a href="https://vrum.fi/" target="_blank" class="_48-px-post-title">Vrum Vrum Oy</a>
+                <a href="https://www.finhem.fi/" target="_blank" class="_48-px-post-title">FINHEM Oy</a>
                 <div class="_10-px-top-margin-div">
                   <div class="category-project">2024</div>
                 </div>
               </div>
             </div>
-            <div id="w-node-_7e7a24ce-cd2e-c640-23ee-6084149a76df-149a76d6" data-w-id="7e7a24ce-cd2e-c640-23ee-6084149a76df" class="work-div-wrapper"><img loading="lazy" alt="Vrum Vrum Oy verkkosivut" src="images/Vrum_Mockup.webp" class="work-image">
-              <a href="https://vrum.fi/" target="_blank" class="view-circle-link w-inline-block">
+            <div id="w-node-_7e7a24ce-cd2e-c640-23ee-6084149a76df-149a76d6" data-w-id="7e7a24ce-cd2e-c640-23ee-6084149a76df" class="work-div-wrapper"><img loading="lazy" alt="FINHEM Oy verkkosivut" src="images/FINHEM_Mockup.webp" class="work-image">
+              <a href="https://www.finhem.fi/" target="_blank" class="view-circle-link w-inline-block">
                 <div class="view-text">Tutustu</div>
               </a>
             </div>
