--- a/tyot.html
+++ b/tyot.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Jan 24 2025 07:57:50 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Jan 31 2025 07:33:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="664df11e3916b1a4e878c280" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -55,6 +55,37 @@
         <h1 class="h1">Työt</h1>
       </div>
       <div data-w-id="c0c35a52-2627-6f28-b44e-30bf93b1086d" style="opacity:0;-webkit-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="ty-t-flex">
+        <div class="top-project-grid">
+          <div id="w-node-e5259b54-3881-2c6f-e830-fafac469d88e-c469d88d" data-w-id="e5259b54-3881-2c6f-e830-fafac469d88e" class="work-div-wrapper"><img loading="lazy" alt="Tuias Oy verkkosivut" src="images/Tuias_Mockup.webp" class="work-image">
+            <a href="https://tuias.fi/" target="_blank" class="view-circle-link w-inline-block">
+              <div class="view-text">Tutustu</div>
+            </a>
+          </div>
+          <div id="w-node-e5259b54-3881-2c6f-e830-fafac469d893-c469d88d" class="center-flex-div">
+            <div>
+              <a href="https://tuias.fi/" target="_blank" class="_48-px-post-title">Tuias Oy</a>
+              <div class="_10-px-top-margin-div">
+                <div class="category-project">2025</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="middle-project-grid">
+          <div id="w-node-_7e7a24ce-cd2e-c640-23ee-6084149a76d7-149a76d6" class="hide-on-mobile-div"></div>
+          <div id="w-node-_7e7a24ce-cd2e-c640-23ee-6084149a76d8-149a76d6" class="center-flex-div">
+            <div>
+              <a href="https://www.bistrolaituri.fi/" target="_blank" class="_48-px-post-title">Bistro Laituri</a>
+              <div class="_10-px-top-margin-div">
+                <div class="category-project">2024</div>
+              </div>
+            </div>
+          </div>
+          <div id="w-node-_7e7a24ce-cd2e-c640-23ee-6084149a76df-149a76d6" data-w-id="7e7a24ce-cd2e-c640-23ee-6084149a76df" class="work-div-wrapper"><img loading="lazy" alt="Bistro Laituri verkkosivut" src="images/BistroLaituri-Mockup.webp" class="work-image">
+            <a href="https://www.bistrolaituri.fi/" target="_blank" class="view-circle-link w-inline-block">
+              <div class="view-text">Tutustu</div>
+            </a>
+          </div>
+        </div>
         <div class="top-project-grid">
           <div id="w-node-e5259b54-3881-2c6f-e830-fafac469d88e-c469d88d" data-w-id="e5259b54-3881-2c6f-e830-fafac469d88e" class="work-div-wrapper"><img loading="lazy" alt="PreLex Oy verkkosivut" src="images/PreLex_Mockup.webp" class="work-image">
             <a href="https://prelex.fi/" target="_blank" class="view-circle-link w-inline-block">
@@ -142,7 +173,7 @@
               </div>
             </div>
           </div>
-          <div id="w-node-_7e7a24ce-cd2e-c640-23ee-6084149a76df-149a76d6" data-w-id="7e7a24ce-cd2e-c640-23ee-6084149a76df" class="work-div-wrapper"><img loading="lazy" alt="FINHEM Oy Verkkosivut" src="images/Finhem_Mockup.webp" class="work-image">
+          <div id="w-node-_7e7a24ce-cd2e-c640-23ee-6084149a76df-149a76d6" data-w-id="7e7a24ce-cd2e-c640-23ee-6084149a76df" class="work-div-wrapper"><img loading="lazy" alt="FINHEM Oy Verkkosivut" src="images/FINHEM_Mockup.webp" class="work-image">
             <a href="https://finhem.fi/" target="_blank" class="view-circle-link w-inline-block">
               <div class="view-text">Tutustu</div>
             </a>
