--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Jan 31 2025 07:33:54 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Feb 01 2025 07:52:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="664df11e3916b1a4e878c27c" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -121,7 +121,7 @@
                 </div>
               </div>
             </div>
-            <div id="w-node-_7e7a24ce-cd2e-c640-23ee-6084149a76df-149a76d6" data-w-id="7e7a24ce-cd2e-c640-23ee-6084149a76df" class="work-div-wrapper"><img loading="lazy" alt="FINHEM Oy verkkosivut" src="images/FINHEM_Mockup.webp" class="work-image">
+            <div id="w-node-_7e7a24ce-cd2e-c640-23ee-6084149a76df-149a76d6" data-w-id="7e7a24ce-cd2e-c640-23ee-6084149a76df" class="work-div-wrapper"><img loading="lazy" alt="FINHEM Oy verkkosivut" src="images/finhem_mockup.webp" class="work-image">
               <a href="https://www.finhem.fi/" target="_blank" class="view-circle-link w-inline-block">
                 <div class="view-text">Tutustu</div>
               </a>
