Update web content

--- a/whatsapp.html
+++ b/whatsapp.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Feb 26 2025 08:03:07 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Feb 26 2025 08:18:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="67bc4304890c25592bc6713c" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -65,7 +65,7 @@
                   <div class="ybw2-c2" id="ybwChat2">
                     <div class="ybw2-ts2">
                       <div class="ybw2-pw2">
-                        <div class="ybw2-piw2"><img src="https://www.nords.fi/images/Eeli-p-500.webp" alt="WhatsApp Profile Images" class="ybw2-pi2">
+                        <div class="ybw2-piw2"><img src="https://www.nords.fi/images/Eeli.webp" alt="WhatsApp Profile Images" class="ybw2-pi2">
                           <div class="ybw2-li2"></div>
                         </div>
                         <div class="ybw2-pi2">
@@ -142,7 +142,7 @@
     <section class="section whatsapp-cta">
       <div class="w-layout-blockcontainer container w-container">
         <h2 class="whatsapp-cta-title">Kiinnostuitko?</h2>
-        <p class="whatsapp-paragraph">Ota yhteyttä nyt ja asennetaan Whatsapp pikanappi yrityksesti nettisivuille.</p>
+        <p class="whatsapp-paragraph">Ota yhteyttä ja asennetaan Whatsapp pikanappi yrityksesti nettisivuille.</p>
         <div class="space _24"></div>
         <a href="ota-yhteytta" class="button white w-button">Ota yhteyttä</a>
       </div>
@@ -242,7 +242,7 @@
     <div class="ybw-c" id="ybwChat">
       <div class="ybw-ts">
         <div class="ybw-pw">
-          <div class="ybw-piw"><img src="https://www.nords.fi/images/Eeli-p-500.webp" alt="WhatsApp Profile Images" class="ybw-pi">
+          <div class="ybw-piw"><img src="https://www.nords.fi/images/Eeli.webp" alt="WhatsApp Profile Images" class="ybw-pi">
             <div class="ybw-li"></div>
           </div>
           <div class="ybw-pi">
