--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Feb 26 2025 08:03:07 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Feb 26 2025 08:18:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="664df11e3916b1a4e878c27c" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -462,14 +462,14 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer><img src="images/Eeli.webp" loading="lazy" alt="Eeli Lohi" class="whatsapp-image">
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=664df11d3916b1a4e878c205" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/nords-k7i7y.js" type="text/javascript"></script>
   <div class="ybw">
     <div class="ybw-c" id="ybwChat">
       <div class="ybw-ts">
         <div class="ybw-pw">
-          <div class="ybw-piw"><img src="https://www.nords.fi/images/Eeli-p-500.webp" alt="WhatsApp Profile Images" class="ybw-pi">
+          <div class="ybw-piw"><img src="https://www.nords.fi/images/Eeli.webp" alt="WhatsApp Profile Images" class="ybw-pi">
             <div class="ybw-li"></div>
           </div>
           <div class="ybw-pi">
