--- a/kotisivut-kysely.html
+++ b/kotisivut-kysely.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Feb 26 2025 08:03:07 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Feb 26 2025 08:18:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66646b8c3d992cd35515738f" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -187,7 +187,7 @@
     <div class="ybw-c" id="ybwChat">
       <div class="ybw-ts">
         <div class="ybw-pw">
-          <div class="ybw-piw"><img src="https://www.nords.fi/images/Eeli-p-500.webp" alt="WhatsApp Profile Images" class="ybw-pi">
+          <div class="ybw-piw"><img src="https://www.nords.fi/images/Eeli.webp" alt="WhatsApp Profile Images" class="ybw-pi">
             <div class="ybw-li"></div>
           </div>
           <div class="ybw-pi">
