--- a/tyot.html
+++ b/tyot.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Feb 26 2025 08:03:07 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Feb 26 2025 08:18:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="664df11e3916b1a4e878c280" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -307,7 +307,7 @@
     <div class="ybw-c" id="ybwChat">
       <div class="ybw-ts">
         <div class="ybw-pw">
-          <div class="ybw-piw"><img src="https://www.nords.fi/images/Eeli-p-500.webp" alt="WhatsApp Profile Images" class="ybw-pi">
+          <div class="ybw-piw"><img src="https://www.nords.fi/images/Eeli.webp" alt="WhatsApp Profile Images" class="ybw-pi">
             <div class="ybw-li"></div>
           </div>
           <div class="ybw-pi">
