Update about image

--- a/tiimi.html
+++ b/tiimi.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Feb 26 2025 08:18:16 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Mar 25 2025 11:49:08 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="664df11e3916b1a4e878c282" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div id="w-node-_246ac531-8876-4477-6bf1-bfad96bdcaad-e878c282" class="team-member-div">
-          <div class="team-image-div"><img src="images/Joose_Lohi.jpeg" loading="lazy" alt="Joose Lohi" class="team-image"></div>
+          <div class="team-image-div"><img src="images/Joose-Lohi-musta-kuva.jpg" loading="lazy" alt="Joose Lohi" class="team-image joose"></div>
           <div class="team-member-name-div">
             <div class="team-flex">
               <div class="_19-px-text">Joose Lohi</div>
