Configure chat bot integration

--- a/blogi/nain-nostat-yrityksesi-karkeen-googlen-hakutuloksissa.html
+++ b/blogi/nain-nostat-yrityksesi-karkeen-googlen-hakutuloksissa.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Mar 25 2025 11:49:08 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Apr 01 2025 06:51:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="666165c205e7278c111e36fc" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -221,60 +221,8 @@
     </div>
   </footer>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=664df11d3916b1a4e878c205" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="../js/nords-k7i7y.js" type="text/javascript"></script>
-  <div class="ybw">
-    <div class="ybw-c" id="ybwChat">
-      <div class="ybw-ts">
-        <div class="ybw-pw">
-          <div class="ybw-piw"><img src="https://www.nords.fi/images/Eeli.webp" alt="WhatsApp Profile Images" class="ybw-pi">
-            <div class="ybw-li"></div>
-          </div>
-          <div class="ybw-pi">
-            <div class="ybw-pn">Eeli Lohi</div>
-            <div class="ybw-ps">Nords Oy</div>
-          </div>
-        </div>
-        <div id="closeChat" class="ybw-cb"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewbox="0 0 17 17" fill="none" class="ybw-ci">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M3.45691 0.597734L0.866241 3.18492L6.04728 8.35899L0.865857 13.5334L3.45653 16.1206L8.63795 10.9462L13.8196 16.1209L16.4103 13.5337L11.2286 8.35899L16.4099 3.1847L13.8192 0.597517L8.63795 5.77181L3.45691 0.597734Z" fill="#D1D1D1"></path>
-          </svg></div>
-      </div>
-      <div class="ybw-cbg">
-        <div class="ybw-cs">
-          <div class="ybw-cb" id="chatBox">
-            <div class="ybw-ctt">Eeli Lohi</div>
-            <div class="ybw-cm">Moi! 👋<br>Voinko olla avuksi?</div>
-          </div>
-        </div>
-      </div>
-      <a href="https://wa.me/358449819623" target="_blank" class="ybw-l">
-        <div class="ybw-b"><svg xmlns="http://www.w3.org/2000/svg" width="31" height="31" viewbox="0 0 31 31" fill="none" class="ybw-i">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M25.5314 5.42686C22.8783 2.77059 19.3498 1.3071 15.5908 1.30554C7.84492 1.30554 1.54091 7.60937 1.5378 15.3573C1.53676 17.8341 2.18378 20.2518 3.41359 22.3829L1.41992 29.6649L8.86962 27.7107C10.9223 28.8304 13.2333 29.4205 15.5851 29.4212H15.591C23.3359 29.4212 29.6406 23.1168 29.6436 15.3686C29.6451 11.6135 28.1848 8.08295 25.5314 5.42686ZM15.5908 27.0479H15.5859C13.4901 27.0471 11.4347 26.4838 9.64109 25.4198L9.21477 25.1666L4.794 26.3263L5.97397 22.0162L5.69616 21.5743C4.52692 19.7146 3.9095 17.5651 3.91054 15.3582C3.91296 8.9183 9.1528 3.67898 15.5955 3.67898C18.7153 3.68002 21.648 4.89651 23.8531 7.10429C26.0583 9.31208 27.2721 12.2467 27.271 15.3677C27.2682 21.8081 22.0288 27.0479 15.5908 27.0479V27.0479ZM21.9976 18.3C21.6466 18.1242 19.9202 17.275 19.5982 17.1576C19.2766 17.0405 19.0422 16.9821 18.8084 17.3335C18.5742 17.6849 17.9014 18.4759 17.6964 18.7101C17.4915 18.9445 17.2869 18.9739 16.9357 18.798C16.5845 18.6223 15.4532 18.2514 14.1119 17.0552C13.0681 16.1241 12.3635 14.9743 12.1585 14.6229C11.9539 14.2712 12.1568 14.0995 12.3126 13.9063C12.6927 13.4343 13.0733 12.9394 13.1903 12.7052C13.3075 12.4708 13.2488 12.2657 13.1609 12.09C13.0733 11.9143 12.3711 10.186 12.0786 9.48275C11.7933 8.79834 11.5041 8.89077 11.2884 8.88004C11.0838 8.86983 10.8496 8.86775 10.6154 8.86775C10.3814 8.86775 10.001 8.95551 9.679 9.30723C9.35722 9.65878 8.45022 10.5081 8.45022 12.2365C8.45022 13.9648 9.70843 15.6344 9.88394 15.8688C10.0595 16.1032 12.36 19.6498 15.8823 21.1706C16.72 21.5327 17.374 21.7486 17.8841 21.9104C18.7253 22.1777 19.4905 22.1399 20.0957 22.0496C20.7704 21.9487 22.1729 21.2 22.4658 20.3799C22.7583 19.5596 22.7583 18.8567 22.6704 18.7101C22.5828 18.5637 22.3486 18.4759 21.9976 18.3V18.3Z" fill="white"></path>
-          </svg>
-          <div class="ybw-bt">Aloita keskustelu</div>
-        </div>
-      </a>
-    </div>
-    <div id="ybwButton" class="ybw-f"><svg xmlns="http://www.w3.org/2000/svg" width="31" height="31" viewbox="0 0 31 31" fill="none" class="ybw-fi">
-        <path fill-rule="evenodd" clip-rule="evenodd" d="M25.5314 5.42686C22.8783 2.77059 19.3498 1.3071 15.5908 1.30554C7.84492 1.30554 1.54091 7.60937 1.5378 15.3573C1.53676 17.8341 2.18378 20.2518 3.41359 22.3829L1.41992 29.6649L8.86962 27.7107C10.9223 28.8304 13.2333 29.4205 15.5851 29.4212H15.591C23.3359 29.4212 29.6406 23.1168 29.6436 15.3686C29.6451 11.6135 28.1848 8.08295 25.5314 5.42686ZM15.5908 27.0479H15.5859C13.4901 27.0471 11.4347 26.4838 9.64109 25.4198L9.21477 25.1666L4.794 26.3263L5.97397 22.0162L5.69616 21.5743C4.52692 19.7146 3.9095 17.5651 3.91054 15.3582C3.91296 8.9183 9.1528 3.67898 15.5955 3.67898C18.7153 3.68002 21.648 4.89651 23.8531 7.10429C26.0583 9.31208 27.2721 12.2467 27.271 15.3677C27.2682 21.8081 22.0288 27.0479 15.5908 27.0479V27.0479ZM21.9976 18.3C21.6466 18.1242 19.9202 17.275 19.5982 17.1576C19.2766 17.0405 19.0422 16.9821 18.8084 17.3335C18.5742 17.6849 17.9014 18.4759 17.6964 18.7101C17.4915 18.9445 17.2869 18.9739 16.9357 18.798C16.5845 18.6223 15.4532 18.2514 14.1119 17.0552C13.0681 16.1241 12.3635 14.9743 12.1585 14.6229C11.9539 14.2712 12.1568 14.0995 12.3126 13.9063C12.6927 13.4343 13.0733 12.9394 13.1903 12.7052C13.3075 12.4708 13.2488 12.2657 13.1609 12.09C13.0733 11.9143 12.3711 10.186 12.0786 9.48275C11.7933 8.79834 11.5041 8.89077 11.2884 8.88004C11.0838 8.86983 10.8496 8.86775 10.6154 8.86775C10.3814 8.86775 10.001 8.95551 9.679 9.30723C9.35722 9.65878 8.45022 10.5081 8.45022 12.2365C8.45022 13.9648 9.70843 15.6344 9.88394 15.8688C10.0595 16.1032 12.36 19.6498 15.8823 21.1706C16.72 21.5327 17.374 21.7486 17.8841 21.9104C18.7253 22.1777 19.4905 22.1399 20.0957 22.0496C20.7704 21.9487 22.1729 21.2 22.4658 20.3799C22.7583 19.5596 22.7583 18.8567 22.6704 18.7101C22.5828 18.5637 22.3486 18.4759 21.9976 18.3V18.3Z" fill="white"></path>
-      </svg></div>
-  </div>
-  <style>.ybw{position:fixed;bottom:30px;right:30px;z-index:1000}.ybw-c{width:300px;background:#fff;border-radius:18px;box-shadow:0 4px 12px rgba(0,0,0,.2);opacity:0;visibility:hidden;transform:translateY(20px);transition:opacity .3s ease,transform .3s ease,visibility .3s ease;position:fixed;bottom:102px;right:30px}.ybw-c.visible{opacity:1;visibility:visible;transform:translateY(0)}.ybw-ts{display:flex;justify-content:space-between;align-items:center;padding:20px}.ybw-pw{display:flex;align-items:center;gap:8px}.ybw-piw{position:relative;width:46px;height:46px;margin-right:12px}.ybw-pi{width:100%;height:100%;border-radius:50%;object-fit:cover}.ybw-li{position:absolute;top:-1px;left:-1px;width:12px;height:12px;background:#4caf50;border:2px solid #fff;border-radius:50%}.ybw-pi{flex:1}.ybw-pn{font-size:12px;line-height:130%;font-weight:500;color:#333;margin-bottom:4px}.ybw-ps{font-size:11px;line-height:130%;font-weight:300}.ybw-cb{cursor:pointer}.ybw-ci{width:16px;height:16px;margin-right:8px}.ybw-cbg{padding:20px 20px 60px 20px;background-color:#e6ddd4}.ybw-cb{background:#fff;padding:12px;border-radius:8px;opacity:1;transform:translateX(20px);transition:opacity .3s ease,transform .3s ease}.ybw-cb.visible{opacity:1;transform:translateX(0)}.ybw-ctt{font-size:12px;font-weight:500;color:#b0b0b0;margin-bottom:6px}.ybw-cm{font-size:12px;color:#333;line-height:1.6}.ybw-l{display:block;text-decoration:none;padding:20px 20px}.ybw-b{display:flex;align-items:center;justify-content:center;gap:4px;background:#25d366;color:#fff;padding:12px;border-radius:58px;font-weight:500;transition:background .3s ease}.ybw-b:hover{background:#128c7e}.ybw-i{width:18px;height:18px;margin-right:8px}.ybw-bt{font-size:15px}.ybw-f{cursor:pointer;background:#25d366;width:58px;height:58px;border-radius:50%;display:flex;justify-content:center;align-items:center;box-shadow:0 4px 8px rgba(0,0,0,.2);transition:transform .3s ease}.ybw-f:hover{transform:scale(1.1)}.ybw-fi{width:26px;height:26px}@media (max-width:480px){.ybw{position:fixed;bottom:16px;right:16px;z-index:1000}.ybw-c{width:90%;right:5%;bottom:90px;right:16px}.ybw-fi{width:25px;height:25px}.ybw-b{font-size:14px;padding:8px}}</style>
-  <script>// WhatsApp Chat Widget Script
-    const ybwButton = document.getElementById("ybwButton");
-    const ybwChat = document.getElementById("ybwChat");
-    const closeChat = document.getElementById("closeChat");
-    const chatBox = document.getElementById("chatBox");
-    ybwButton.addEventListener("click", () => {
-        ybwChat.classList.toggle("visible");
-        setTimeout(() => {
-        chatBox.classList.toggle("visible");
-        }, 100);
-    });
-    closeChat.addEventListener("click", () => {
-        chatBox.classList.remove("visible");
-        setTimeout(() => {
-        ybwChat.classList.remove("visible");
-        }, 100);
-    });</script>
+  <script src="../js/nords-k7i7y.js" type="text/javascript"></script><!--  Elfsight AI Chatbot | Untitled AI Chatbot  -->
+  <script src="https://static.elfsight.com/platform/platform.js" async=""></script>
+  <div class="elfsight-app-8710a1d1-348c-4159-a2be-20e841fb548b" data-elfsight-app-lazy=""></div>
 </body>
 </html>
