Configure new form integrations

--- a/kotisivut-kysely.html
+++ b/kotisivut-kysely.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Apr 01 2025 06:51:23 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Apr 01 2025 15:35:15 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66646b8c3d992cd35515738f" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -35,13 +35,12 @@
   <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="70a813b3-3f24-4230-9fe4-da57fb9a6f73" data-blockingmode="auto" type="text/javascript"></script>
 </head>
 <body>
-  <div class="navigation-wrapper feedback">
-    <div class="container-4">
-      <div class="navigation-grid center"><img src="images/ndm-cropped.png" loading="lazy" id="w-node-_2db7c0e2-937f-caf0-b907-c8e00cda98fa-5515738f" sizes="(max-width: 479px) 104px, 152.9375px" alt="" srcset="images/ndm-cropped-p-500.png 500w, images/ndm-cropped-p-800.png 800w, images/ndm-cropped-p-1080.png 1080w, images/ndm-cropped-p-1600.png 1600w, images/ndm-cropped-p-2000.png 2000w, images/ndm-cropped-p-2600.png 2600w, images/ndm-cropped-p-3200.png 3200w, images/ndm-cropped.png 6037w" class="nords-feedback"></div>
-    </div>
-  </div>
   <div class="section-3 feedback">
-    <div class="container-4">
+    <div class="w-embed w-script"><!--  Elfsight Form Builder | Kysely  -->
+      <script src="https://static.elfsight.com/platform/platform.js" async=""></script>
+      <div class="elfsight-app-868c24d9-3400-4c61-a365-191e26e4b97d" data-elfsight-app-lazy=""></div>
+    </div>
+    <div class="container-4 hide">
       <div class="form-wrapper">
         <div class="title-wrap">
           <h1 class="h2">Kiitos, että valitsit meiltä kotisivut!</h1>
