--- a/ota-yhteytta.html
+++ b/ota-yhteytta.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Apr 01 2025 06:51:23 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Apr 01 2025 15:35:15 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="664df11e3916b1a4e878c283" data-wf-site="664df11d3916b1a4e878c205" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -59,9 +59,9 @@
           <div class="_20-px-bottom-margin">
             <div class="_32-px-text">Jätä meille viesti</div>
           </div>
-          <div class="_40-px-top-margin-div"><img src="images/6405e89d2779e771f356f4ff_work-1.jpg" loading="lazy" id="w-node-a668f3e9-eca4-3fe4-18ba-0996c8899d42-e878c283" sizes="(max-width: 479px) 83vw, (max-width: 767px) 333.328125px, (max-width: 991px) 266.6640625px, (max-width: 1439px) 95vw, 1280px" alt="Tabletti" srcset="images/6405e89d2779e771f356f4ff_work-1-p-500.jpg 500w, images/6405e89d2779e771f356f4ff_work-1-p-800.jpg 800w, images/6405e89d2779e771f356f4ff_work-1-p-1080.jpg 1080w, images/6405e89d2779e771f356f4ff_work-1.jpg 1600w" class="contact-image"></div>
+          <div class="_40-px-top-margin-div"><img src="images/6405e89d2779e771f356f4ff_work-1.jpg" loading="lazy" id="w-node-a668f3e9-eca4-3fe4-18ba-0996c8899d42-e878c283" sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" alt="Tabletti" srcset="images/6405e89d2779e771f356f4ff_work-1-p-500.jpg 500w, images/6405e89d2779e771f356f4ff_work-1-p-800.jpg 800w, images/6405e89d2779e771f356f4ff_work-1-p-1080.jpg 1080w, images/6405e89d2779e771f356f4ff_work-1.jpg 1600w" class="contact-image"></div>
         </div>
-        <div class="form-block w-form">
+        <div class="form-block hide w-form">
           <form method="post" name="wf-form-Yhteydenottolomake" data-name="Yhteydenottolomake" style="opacity:0;-webkit-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(null, 10vh, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" data-w-id="a668f3e9-eca4-3fe4-18ba-0996c8899d31" action="https://airform.io/joose@nords.fi" id="wf-form-Yhteydenottolomake" class="contact-form" data-wf-page-id="664df11e3916b1a4e878c283" data-wf-element-id="a668f3e9-eca4-3fe4-18ba-0996c8899d31"><input class="connect-textfield w-input" maxlength="256" name="Nimi" data-name="Nimi" placeholder="Nimi" type="text" id="Nimi" required=""><input class="connect-textfield w-input" maxlength="256" name="Sahkopostiosoite" data-name="Sahkopostiosoite" placeholder="Sähköpostiosoite" type="text" id="Sahkopostiosoite" required=""><textarea id="Viesti" name="Viesti" maxlength="5000" data-name="Viesti" placeholder="Viesti" required="" class="textarea w-node-a668f3e9-eca4-3fe4-18ba-0996c8899d34-e878c283 w-input"></textarea>
             <div id="w-node-a668f3e9-eca4-3fe4-18ba-0996c8899d35-e878c283" class="submit-button-div"><input type="submit" data-wait="Odota hetki..." id="w-node-a668f3e9-eca4-3fe4-18ba-0996c8899d36-e878c283" class="submit-button w-button" value="Lähetä"></div>
           </form>
@@ -71,6 +71,10 @@
           <div class="error-message w-form-fail">
             <div>Oho! Jotain meni vikaan viestin lähettämisessä.</div>
           </div>
+        </div>
+        <div class="w-embed w-script"><!--  Elfsight Form Builder | Yhteydenottolomake  -->
+          <script src="https://static.elfsight.com/platform/platform.js" async=""></script>
+          <div class="elfsight-app-789f8ec3-319f-4179-9331-53cd03a52d99" data-elfsight-app-lazy=""></div>
         </div>
       </div>
     </div>
