--- a/tyot.html
+++ b/tyot.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 12:42:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 12:48:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68027b0e8102484c7914ed16" data-wf-site="68027b0d8102484c7914ecad">
 <head>
   <meta charset="utf-8">
@@ -191,7 +191,7 @@
               <div class="project-cms-item">
                 <div class="projects-cms-item">
                   <div class="projects-item">
-                    <a href="https://www.lareine.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/La_Reine_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/La_Reine_Mockup-p-500.webp 500w, images/La_Reine_Mockup-p-800.webp 800w, images/La_Reine_Mockup-p-1080.webp 1080w, images/La_Reine_Mockup-p-1600.webp 1600w, images/La_Reine_Mockup-p-2000.webp 2000w, images/La_Reine_Mockup-p-2600.webp 2600w, images/La_Reine_Mockup.webp 2800w" alt="La Reine mallikuva" class="projects-thumb">
+                    <a href="https://finhem.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/FINHEM_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/FINHEM_Mockup.webp 500w, images/FINHEM_Mockup.webp 800w, images/FINHEM_Mockup.webp 1080w, images/FINHEM_Mockup.webp 1600w, images/FINHEM_Mockup.webp 2000w, images/FINHEM_Mockup.webp 2600w, images/FINHEM_Mockup.webp 2800w" alt="" class="projects-thumb">
                       <div class="projects-btn-wrap">
                         <div class="projects-btn-text">Tutustu</div>
                         <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -200,7 +200,7 @@
                       </div>
                     </a>
                     <div class="projects-title-wrap">
-                      <a href="#" class="projects-title">La Reine</a>
+                      <a href="#" class="projects-title">FINHEM Oy</a>
                     </div>
                   </div>
                 </div>
