Update background images

--- a/palvelut.html
+++ b/palvelut.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 12:48:36 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 13:25:58 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68027b0e8102484c7914ed15" data-wf-site="68027b0d8102484c7914ecad">
 <head>
   <meta charset="utf-8">
@@ -93,7 +93,7 @@
                 </div>
               </div>
               <div class="hero-right small">
-                <div class="hero-thumb-wrap"><img src="images/tumma-tausta.webp" loading="lazy" alt="Taustakuva" class="hero-thumb"></div>
+                <div class="hero-thumb-wrap"><img src="images/taustakuva-8.svg" loading="lazy" alt="Taustakuva" class="hero-thumb"></div>
               </div>
             </div>
           </div>
@@ -137,7 +137,7 @@
                   <div class="services-text-wrap">
                     <p class="services-text">Optimoimme sivustosi rakenteen, sisällön ja tekniset yksityiskohdat – räätälöidysti juuri yrityksesi näkyvyyden parantamiseen.</p>
                   </div>
-                  <div class="services-thumb-wrap"><img src="images/tumma-tausta.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/tumma-tausta-p-500.webp 500w, images/tumma-tausta-p-800.webp 800w, images/tumma-tausta-p-1080.webp 1080w, images/tumma-tausta-p-1600.webp 1600w, images/tumma-tausta-p-2000.webp 2000w, images/tumma-tausta-p-2600.webp 2600w, images/tumma-tausta.webp 2800w" alt="Taustakuva" class="services-thumb"></div>
+                  <div class="services-thumb-wrap"><img src="images/taustakuva-8.svg" loading="lazy" alt="Taustakuva" class="services-thumb"></div>
                 </div>
                 <div class="services-item">
                   <div class="services-icon-wrap"><img src="images/chat-ikoni.svg" loading="lazy" alt="Chat ikoni" class="services-icon"></div>
