--- a/tyot.html
+++ b/tyot.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 12:48:36 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Apr 21 2025 13:25:58 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="68027b0e8102484c7914ed16" data-wf-site="68027b0d8102484c7914ecad">
 <head>
   <meta charset="utf-8">
@@ -140,40 +140,6 @@
               <div class="project-cms-item">
                 <div class="projects-cms-item">
                   <div class="projects-item">
-                    <a href="https://businesstilat.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/BusinessTilat_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/BusinessTilat_Mockup-p-500.webp 500w, images/BusinessTilat_Mockup-p-800.webp 800w, images/BusinessTilat_Mockup-p-1080.webp 1080w, images/BusinessTilat_Mockup-p-1600.webp 1600w, images/BusinessTilat_Mockup-p-2000.webp 2000w, images/BusinessTilat_Mockup-p-2600.webp 2600w, images/BusinessTilat_Mockup.webp 2800w" alt="" class="projects-thumb">
-                      <div class="projects-btn-wrap">
-                        <div class="projects-btn-text">Tutustu</div>
-                        <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M10.7813 7.33312L7.20529 3.75712L8.14796 2.81445L13.3333 7.99979L8.14796 13.1851L7.20529 12.2425L10.7813 8.66645H2.66663V7.33312H10.7813Z" fill="currentColor"></path>
-                          </svg></div>
-                      </div>
-                    </a>
-                    <div class="projects-title-wrap">
-                      <a href="#" class="projects-title">BusinessTilat Oy</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="project-cms-item">
-                <div class="projects-cms-item">
-                  <div class="projects-item">
-                    <a href="https://vrum.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/vrum-mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/vrum-mockup-p-500.webp 500w, images/vrum-mockup-p-800.webp 800w, images/vrum-mockup-p-1080.webp 1080w, images/vrum-mockup-p-1600.webp 1600w, images/vrum-mockup-p-2000.webp 2000w, images/vrum-mockup-p-2600.webp 2600w, images/vrum-mockup.webp 2800w" alt="Vrum mallikuva" class="projects-thumb">
-                      <div class="projects-btn-wrap">
-                        <div class="projects-btn-text">Tutustu</div>
-                        <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M10.7813 7.33312L7.20529 3.75712L8.14796 2.81445L13.3333 7.99979L8.14796 13.1851L7.20529 12.2425L10.7813 8.66645H2.66663V7.33312H10.7813Z" fill="currentColor"></path>
-                          </svg></div>
-                      </div>
-                    </a>
-                    <div class="projects-title-wrap">
-                      <a href="#" class="projects-title">Vrum Vrum Oy</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="project-cms-item">
-                <div class="projects-cms-item">
-                  <div class="projects-item">
                     <a href="https://www.mrcardetailing.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/mr-car-detailing-mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/mr-car-detailing-mockup-p-500.webp 500w, images/mr-car-detailing-mockup-p-800.webp 800w, images/mr-car-detailing-mockup-p-1080.webp 1080w, images/mr-car-detailing-mockup-p-1600.webp 1600w, images/mr-car-detailing-mockup-p-2000.webp 2000w, images/mr-car-detailing-mockup-p-2600.webp 2600w, images/mr-car-detailing-mockup.webp 2800w" alt="MR Car Detailing mallikuva" class="projects-thumb">
                       <div class="projects-btn-wrap">
                         <div class="projects-btn-text">Tutustu</div>
@@ -191,7 +157,7 @@
               <div class="project-cms-item">
                 <div class="projects-cms-item">
                   <div class="projects-item">
-                    <a href="https://finhem.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/FINHEM_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/FINHEM_Mockup.webp 500w, images/FINHEM_Mockup.webp 800w, images/FINHEM_Mockup.webp 1080w, images/FINHEM_Mockup.webp 1600w, images/FINHEM_Mockup.webp 2000w, images/FINHEM_Mockup.webp 2600w, images/FINHEM_Mockup.webp 2800w" alt="" class="projects-thumb">
+                    <a href="https://finhem.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/FINHEM_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/FINHEM_Mockup.webp 500w, images/FINHEM_Mockup.webp 800w, images/FINHEM_Mockup.webp 1080w, images/FINHEM_Mockup.webp 1600w, images/FINHEM_Mockup.webp 2000w, images/FINHEM_Mockup.webp 2600w, images/FINHEM_Mockup.webp 2800w" alt="FINHEM Oy mallikuva" class="projects-thumb">
                       <div class="projects-btn-wrap">
                         <div class="projects-btn-text">Tutustu</div>
                         <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -201,6 +167,42 @@
                     </a>
                     <div class="projects-title-wrap">
                       <a href="#" class="projects-title">FINHEM Oy</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="projects-marquee-layout grid-layout">
+              <div class="project-cms-item">
+                <div class="projects-cms-item">
+                  <div class="projects-item">
+                    <a href="https://finspro.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/FinsPro_Mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/FinsPro_Mockup.webp 500w, images/FinsPro_Mockup.webp 800w, images/FinsPro_Mockup.webp 1080w, images/FinsPro_Mockup.webp 1600w, images/FinsPro_Mockup.webp 2000w, images/FinsPro_Mockup.webp 2600w, images/FinsPro_Mockup.webp 2800w" alt="FinsPro mallikuva" class="projects-thumb">
+                      <div class="projects-btn-wrap">
+                        <div class="projects-btn-text">Tutustu</div>
+                        <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10.7813 7.33312L7.20529 3.75712L8.14796 2.81445L13.3333 7.99979L8.14796 13.1851L7.20529 12.2425L10.7813 8.66645H2.66663V7.33312H10.7813Z" fill="currentColor"></path>
+                          </svg></div>
+                      </div>
+                    </a>
+                    <div class="projects-title-wrap">
+                      <a href="#" class="projects-title">FinsPro Oy</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="project-cms-item">
+                <div class="projects-cms-item">
+                  <div class="projects-item">
+                    <a href="https://vrum.fi/" target="_blank" class="projects-thumb-wrap w-inline-block"><img src="images/vrum-mockup.webp" loading="lazy" sizes="(max-width: 2800px) 100vw, 2800px" srcset="images/vrum-mockup-p-500.webp 500w, images/vrum-mockup-p-800.webp 800w, images/vrum-mockup-p-1080.webp 1080w, images/vrum-mockup-p-1600.webp 1600w, images/vrum-mockup-p-2000.webp 2000w, images/vrum-mockup-p-2600.webp 2600w, images/vrum-mockup.webp 2800w" alt="Vrum mallikuva" class="projects-thumb">
+                      <div class="projects-btn-wrap">
+                        <div class="projects-btn-text">Tutustu</div>
+                        <div class="projects-btn-icon w-embed"><svg width=" 100%" height=" 100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10.7813 7.33312L7.20529 3.75712L8.14796 2.81445L13.3333 7.99979L8.14796 13.1851L7.20529 12.2425L10.7813 8.66645H2.66663V7.33312H10.7813Z" fill="currentColor"></path>
+                          </svg></div>
+                      </div>
+                    </a>
+                    <div class="projects-title-wrap">
+                      <a href="#" class="projects-title">Vrum Vrum Oy</a>
                     </div>
                   </div>
                 </div>
